# rangefinder

./: .gitignore  CLAUDE.md  DESIGN.md  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docker/attacker/: Dockerfile
docs/: PLAN-v1.md  detection.md  walkthrough.md
examples/: acme.json  corp.json
examples/detections/: kerberos-asrep-roast.yml  ldap-anonymous-bind.yml  smb-anon-sensitive-share.yml
rangefinder/: __init__.py  acl.py  cli.py  coherence.py  credtest.py  detect.py  ntlm.py  paths.py  scoring.py  tls.py  verify.py
rangefinder/capture/: __init__.py  dns.py  http.py  ldap.py  posture.py  scrub.py  smb.py  ssh.py
rangefinder/config/: __init__.py  loader.py  model.py  services.py
rangefinder/facades/: __init__.py  banner.py  base.py  dns.py  http.py  kerberos.py  ldap.py  rdp.py  registry.py  smb.py  ssh.py
rangefinder/importers/: __init__.py  nmap.py
tests/: conftest.py  helpers.py  test_acl.py  test_banner_facade.py  test_capture_http.py  test_capture_ldap.py  test_capture_smb.py  test_cli_capture.py  test_coherence.py  test_compose.py  test_config.py  test_detect.py  test_detection_loop.py  test_dns_facade.py  test_escalation.py  test_http_facade.py  test_http_ntlm.py  test_import_nmap.py  test_kerberos_facade.py  test_ldap_acl.py  test_ldap_binary.py  test_ldap_facade.py  test_ldap_ntlm.py  test_merge.py  test_paths.py  test_posture.py  test_rdp_facade.py  test_schema_version.py  test_scoring.py  test_scrub.py  test_smb_facade.py  test_ssh_facade.py  test_tls.py  test_verify.py  test_verify_estate.py
(+10 files in other folders)
